--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A strategy game consisting of two players. This project implements the game using web-sockets.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
